# cloud-spec-auditor

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
apps/core/: choices.py  exception_handlers.py  exceptions.py  models.py  throttles.py
apps/core/adapters/: aws_adapter.py  azure_adapter.py  cloud_price_adapter.py  gcp_adapter.py  gemini_adapter.py
apps/core/dto/: cloud_service_dto.py  inventory_dto.py  recommendation_dto.py
apps/core/exceptions/: ai_exceptions.py  base.py  cloud_exception.py
apps/core/handlers/: exception_handlers.py
apps/core/utils/: cache_helper.py  parsers.py  region_mapper.py  validator.py
apps/costs/: apps.py  choices.py  models.py  serializers.py  urls.py  views.py
apps/costs/migrations/: 0001_initial.py  0002_alter_cloudservice_memory_gb.py
apps/costs/services/: compare_service.py  (+1 more)
apps/inventories/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/recommendations/: apps.py  models.py  serializers.py  urls.py  views.py
apps/solution_recommend/: apps.py  models.py
apps/users/: models.py  serializers.py  tests.py  urls.py  views.py
costcut/: asgi.py  settings.py  urls.py  wsgi.py
docs/: ARCHITECTURE.md  DECISIONS.md  ONBOARDING_IAM.md  PITCH.md  TROUBLESHOOTING.md
frontend/: Dockerfile  package-lock.json
frontend/app/: layout.tsx
frontend/components/: Navbar.tsx
frontend/lib/: api.ts
pipeline/flows/: inventory_flow.py
pipeline/raw/: apps.py  models.py
pipeline/tasks/: inventory_sync.py  price_sync.py
(+33 files in other folders)
